@@ -35,7 +35,7 @@ function validateForm(contact)
 </script>
 </head>
 
-<body onLoad="MM_preloadImages('../themes/omega_original/images/icons/database_a.gif','../themes/omega_original/images/icons/hosting_plans_a.gif','../themes/omega_original/images/icons/domains_a.gif','../themes/omega_original/images/icons/general_a.gif','../themes/omega_original/images/icons/logout_a.gif','../themes/omega_original/images/icons/manage_users_a.gif','../themes/omega_original/images/icons/webtools_a.gif','../themes/omega_original/images/icons/statistics_a.gif','../themes/omega_original/images/icons/support_a.gif')">
+<body onLoad="MM_preloadImages('../themes/omega_original/images/icons/database_a.gif','../themes/omega_original/images/icons/hosting_plans_a.gif','../themes/omega_original/images/icons/domains_a.gif','../themes/omega_original/images/icons/general_a.gif','../themes/omega_original/images/icons/manage_users_a.gif','../themes/omega_original/images/icons/webtools_a.gif','../themes/omega_original/images/icons/statistics_a.gif','../themes/omega_original/images/icons/support_a.gif')">
 <table width="100%" border="0" cellspacing="0" cellpadding="0" height="100%">
   <tr>
     <td height="80" align="left" valign="top">&nbsp;</td>
@@ -82,7 +82,7 @@ function validateForm(contact)
 			  	<tr>
 			  	   <td>
 			  	   		<INPUT type="reset" value="{TR_RESET}">
-			  	   </td>			  
+			  	   </td>
 			  	   <td>
 			  	   		<INPUT type="submit" value="{TR_SUBMIT}">
 			  	   </td>
